Actualizar proyecto para repositorio personal